--- a/src/main/resources/thymeleaf/fragments/navigation.html
+++ b/src/main/resources/thymeleaf/fragments/navigation.html
@@ -14,7 +14,9 @@
             <li class="uk-active">
                 <a th:href="@{/cart}">Basket</a>
             </li>
-
+            <li class="uk-active">
+                <a th:href="@{/orderlist}">Orders</a>
+            </li>
         </ul>
 
     </div>
